test/fail/basic_syntax/bad_right_brace.lly
#[
SyntaxError: Unexpected token ']'.
    from bad_right_brace.lly:6
]#

var a: List[Integer] = []   a = [10]]
